--- a/app/templates/all_job_list.html
+++ b/app/templates/all_job_list.html
@@ -191,7 +191,7 @@
                   text: "操作不规范，运维两行泪",
                   type: "warning",
                   showCancelButton: true,
-                  showLoaderOnConfirm: false,
+                  showLoaderOnConfirm: true,
                   confirmButtonColor: "#DD6B55",
                   confirmButtonText: "删除~",
                   cancelButtonText: "我在想想吧...",
