--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -21,9 +21,9 @@
                                     
                                        <div class="col-md-7">
                                           <div class="jumbotron">
-                                            <h1>JobService!</h1>
+                                            <h1>JobCenter!</h1>
                                             <p class="lead"> 让添加执行计划任务变得更加优雅~. </p>
-                                            <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+                                            <p><a class="btn btn-lg btn-success" href="#" role="button">Go Go Up!</a></p>
                                             
 
                                           </div>
@@ -43,7 +43,7 @@
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Date</h2>
-                                          <p class="card-text">是ApsCheduler中的一种调度类型，它表示在用户特定的时间点触发。类似于Linux系统中的<code>at</code>命令。</p>
+                                          <p class="card-text">是ApsCheduler中的一种调度触发器类型，它表示在用户特定的时间点触发作业任务。类似于Linux系统中的<code>at</code>命令。</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
@@ -55,7 +55,7 @@
                                         <div class="card-body">
                                           <h2 class="card-title">Cron</h2>
                                           <p class="card-text">
-                                              是ApsCheduler中的一种调度类型,完全兼容Crontab,甚至比Crontab更具有可控性。&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp                </p>
+                                              是ApsCheduler中的一种调度触发器类型,完全兼容Crontab,甚至比Crontab更具有可控性。&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp                </p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
@@ -66,7 +66,7 @@
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Interval</h2>
-                                          <p class="card-text">是ApsCheduler中的一种调度类型, 表示间隔时间运行任务, 可以更加准确的获取我们需要的数据。</p>
+                                          <p class="card-text">是ApsCheduler中的一种调度触发器类型, 表示间隔时间运行作业任务, 可以更加准确的获取我们需要的数据。</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
