--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" http-equiv="Refresh" content="50"/>
 
-{% block title %}🚀🚀🚀JobService🚀🚀🚀{% endblock %}
+{% block title %}🚀🚀🚀JobCenter🚀🚀🚀{% endblock %}
 
 <style type="text/css">
     html,body{height:100%;margin:0;padding:0;}
@@ -30,7 +30,7 @@
             </button>
                <a class="navbar-brand" href="/">
                 <b style="font-family:none;color:#5bc0de">
-                    <span>🚀🚀🚀JobService🚀🚀🚀</span>
+                    <span>🚀🚀🚀JobCenter🚀🚀🚀</span>
                 </b></a>
 
         </div>
@@ -83,7 +83,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <p>© 2019 <b>
-            <span class="fan">JobService</span>
+            <span class="fan">JobCenter</span>
         </b> · <a href="">隐私权和条款</a> · <a href="http://blog.sctux.com" target="_blank">博客</a> · <a href="http://github.com/guomaoqiu" target="_blank">Github项目</a></p>
     </div>
     <div class="col-md-2">
