--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,7 @@
 
 {% block title %}🚀🚀🚀JobCenter🚀🚀🚀{% endblock %}
 
-<style type="text/css">
-    html,body{height:100%;margin:0;padding:0;}
-.container{min-height:100%;margin-bottom:-100px;}
-.empty,footer{height:100px;}
-</style>
+
 {% block head %}
  {{ super() }} 
 <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"> -->
@@ -79,6 +75,30 @@
 </div>
 <br>
 <hr>
+
+
+<!--  固定页脚 -->
+<style>
+    html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 35px;
+  background-color: #f5f5f5;
+}
+</style>
+
 <div class="footer row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
