--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,7 @@
 
 {% block head %}
  {{ super() }} 
-<!-- <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"> -->
-<!-- <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"> -->
+<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="{{  url_for('static',filename='css/sweetalert.css') }}">
  <link rel="stylesheet" type="text/css" href="{{  url_for('static',filename='opsplatform/css/sweetalert.css') }}">
 
