--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -33,9 +33,11 @@
                                           <br>
                                           <p>忘记密码？点击<a href="{{ url_for('auth.password_reset_request') }}">这里</a>找回。</p>
                                           <p>新用户？点击<a href="{{ url_for('.register') }}">这里</a>注册。</p>
-
-
                                       </div>
+                                      <div class="col-md-4">
+                                      </div>
+
+
                                    </div>
                                         <div class="row">
                                     <div class="col-md-4">
