--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
                     <div class="ibox-content">
                         <div class="test_box" contenteditable="true">
 								<center>
-									<img src="http://watchlist.helloflask.com/static/images/totoro.gif">
+									<h1>Welcome ~ ~ ~</h1>
 								</center>
 							</div>
                     </div>
