--- a/app/templates/all_job_list.html
+++ b/app/templates/all_job_list.html
@@ -236,8 +236,8 @@
               content: '/v1/cron/job/show_jobs?id=' + id
             });
     });
-    setInterval( function () {
-      t.ajax.reload(); // 刷新表格数据，分页信息不会重置
-    }, 2000 );
+    // setInterval( function () {
+    //   t.ajax.reload(); // 刷新表格数据，分页信息不会重置
+    // }, 2000 );
 </script>
 {% endblock %}
