--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="{{  url_for('static',filename='css/sweetalert.css') }}">
  <link rel="stylesheet" type="text/css" href="{{  url_for('static',filename='opsplatform/css/sweetalert.css') }}">
-
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block navbar %}
