--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,8 +34,7 @@
                     <div class="ibox-content">
                         <div class="test_box" contenteditable="true">
 								<center>
-									<h1 style="color:green">I am too lazy !</h1>
-									<h1 style="color:green">I want make everything automation🍺 !</h1>
+									<h1 style="color:green">I am too lazy !<br>I want make everything automation🍺 !</h1>
 								</center>
 							</div>
                     </div>
