--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     font-size: 50px;
-    font-family: fantasy;
+    font-family: auto;
     /*font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;*/
     -webkit-user-modify: read-write-plaintext-only;
     background-color: #161616;
