--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,6 +35,7 @@
                         <div class="test_box" contenteditable="true">
 								<center>
 									<h1 style="color:green">I am too lazy 😂!<br>I want make everything automation🍺 !</h1>
+									<h5 style="color:green">Operating without the purpose of automation is a rogue.</h5>
 								</center>
 							</div>
                     </div>
