--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,16 @@
 
     <script src="{{  url_for('static',filename='opsplatform/js/jquery-2.1.1.js') }}"></script>
     <div class="row wrapper border-bottom white-bg page-heading">
+            <div class="col-lg-12">
+            <ol class="breadcrumb">
+                <li class="active">
+                    <a href="https://github.com/guomaoqiu/JobCenter" target="_blank">逛完请留步，点我 star 一下，鼓励一下开发者！ <i class="fa fa-star" aria-hidden="true"></i> star！</a>
+                </li>
+            </ol>
+        </div>
+
+    </div>
+
     </div>
     <div class="wrapper wrapper-content">
         <div class="row">
