--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,8 @@
     word-wrap: break-word;
     overflow-x: hidden;
     overflow-y: auto;
-    font-size: 40px;
-    font-family: auto;
+    font-size: 50px;
+    font-family: fantasy;
     /*font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;*/
     -webkit-user-modify: read-write-plaintext-only;
     background-color: #161616;
@@ -26,14 +26,11 @@
 
     <script src="{{  url_for('static',filename='opsplatform/js/jquery-2.1.1.js') }}"></script>
     <div class="row wrapper border-bottom white-bg page-heading">
-            <div class="col-lg-12">
-            <ol class="breadcrumb">
+        <ol class="breadcrumb">
                 <li class="active">
                     <a href="https://github.com/guomaoqiu/JobCenter" target="_blank">逛完请留步，点我 star 一下，鼓励一下开发者！ <i class="fa fa-star" aria-hidden="true"></i> star！</a>
                 </li>
             </ol>
-
-    </div>
 
     </div>
     <div class="wrapper wrapper-content">
@@ -42,11 +39,11 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
                         <div class="test_box" contenteditable="true">
-								<center>
-									<h1 style="color:green">I am too lazy 😂!<br>I want make everything automation🍺 !</h1>
-									<h5 style="color:green">Operating without the purpose of automation is a rogue.</h5>
-								</center>
-							</div>
+                                <center>
+                                    <h1 style="color:green">I am too lazy !</h1>
+                                    <h1 style="color:green">I want make everything automation🍺 !</h1>
+                                </center>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -54,4 +51,3 @@
     </div>
 
 {% endblock %}
-
