--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -42,7 +42,7 @@
                                         <div class="row">
                                     <div class="col-md-4">
                                       <div class="card" style="width: 18rem;">
-					      <img class="card-img-top" src="{{  url_for('static',filename='img//goblin.png') }}" alt="Card image cap" width="140%"  >
+					      <img class="card-img-top" src="{{  url_for('static',filename='img//barbarian.png') }}" alt="Card image cap" width="140%"  >
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Date</h2>
