--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -104,8 +104,8 @@
                     type: 'POST',
                     data: data,
                     dataType: 'json',
-                    // url: "https://jobcenter2.sctux.com/dingding",
-                    url: "http://localhost:5000/dingding",
+                    url: "https://jobcenter2.sctux.com/dingding",
+                    // url: "http://localhost:5000/dingding",
                     success:function(res){
                         if (res.result) {
                             swal("成功", "😊", "success");
