--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -117,7 +117,8 @@
                 });
         }
         function onGeoError(event){
-            alert("Error code " + event.code + ". " + event.message)
+            // alert("Error code " + event.code + ". " + event.message)
+            swal("失败", "😭", "error" + event.code );
         }
     </script>
 
