--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -118,7 +118,7 @@
         }
         function onGeoError(event){
             // alert("Error code " + event.code + ". " + event.message)
-            swal("失败", "😭", "error" + event.code );
+            swal("失败", "😭", event.code );
         }
     </script>
 
